# ib-practica12-oop-gtests-exercism-AdrianoMoreira07

complejos/: CMakeLists.txt
complejos/src/: complejo.cc  complejo.h  complejos.cc
complejos/test/: gtest_main.cc  test_complejo.cc
complejos_modificacion/: CMakeLists.txt
complejos_modificacion/src/: complejo.cc  complejo.h  complejos.cc
fechas/: CMakeLists.txt
fechas/src/: fecha.cc  fecha.h  fechas.cc  inicio.cc  inicio.h
fechas/test/: test_fecha.cc
